k8s/manifests/statistics-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statistics-api
  namespace: safra-device-stats
  labels:
    app: statistics-api
    tier: frontend
    component: public-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: statistics-api
    tier: frontend
